kubernetes/apps/network-test/lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-test
  annotations:
#    metallb.io/loadBalancerIPs: 192.168.123.250
    external-dns.alpha.kubernetes.io/hostname: test.home.arpa
spec:
  type: LoadBalancer
  selector:
    app: network-test
  ports:
    - port: 80
      targetPort: 80
