kubernetes/apps/network-test/httproute.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    app: network-test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-subdomain-test
spec:
  parentRefs:
  - name: gateway
    namespace: istio-system
  hostnames:
    - testing.home.arpa
  rules:
    - backendRefs:
        - name: service
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-path-test
spec:
  parentRefs:
  - name: gateway
    namespace: istio-system
  hostnames:
    - lab.home.arpa
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /test
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: service
          port: 80
